<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout_register">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizental2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.cardview.widget.CardView
        android:id="@+id/registerCard"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/loginCard"
        app:cardCornerRadius="@dimen/loginCardRadius"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:background="@color/closeToBlack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin"
            android:background="@color/closeToBlack"
            >

            <TextView
                style="@style/headerTextPrimary"
                android:text="@string/register"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:textColor="@color/black"
                android:textSize="40dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/name"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="Name"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/phoneNumber"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="Mobile Number"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/email"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/login_email_hint"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/password"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/Register"
                style="@style/loginButton"
                android:layout_gravity="center"
                android:text="Register"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/transparent"
                />

            <TextView
                android:id="@+id/toLogIn"
                style="@style/parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/darkblue"
                android:text="@string/signup_login_hint"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>